# ai-infra-lab

./: .gitignore  CMakeLists.txt  README.md
TinyInfer/docs/: design.md  rule.md
TinyInfer/docs/table/: cmake.md  modern-cpp-cheatsheet.md  modern-cpp-deep-dive.md
TinyInfer/tinyinfer/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json
TinyInfer/tinyinfer/cmake/: CompilerWarnings.cmake  Dependencies.cmake  Sanitizers.cmake  TinyInferConfig.cmake.in
TinyInfer/tinyinfer/configs/: logging.example.json  model.example.json  tinyinfer.example.json
TinyInfer/tinyinfer/include/tinyinfer/common/: clock.h  error.h  noncopyable.h  result.h  scope_guard.h  types.h
TinyInfer/tinyinfer/include/tinyinfer/concurrency/: bounded_blocking_queue.h
TinyInfer/tinyinfer/include/tinyinfer/domain/: finish_reason.h  output_event.h  request_id.h  request_state.h  sampling_params.h
TinyInfer/tinyinfer/src/: main.cpp
TinyInfer/tinyinfer/tests/: CMakeLists.txt
TinyInfer/tinyinfer/tests/unit/common/: common_test.cpp
TinyInfer/tinyinfer/tests/unit/domain/: finish_reason_test.cpp  output_event_test.cpp  request_state_test.cpp  sampling_params_test.cpp
blockserve/: CMakeLists.txt
blockserve-sim/: CMakeLists.txt
blockserve-sim/configs/: sample_workload.jsonl
blockserve-sim/include/blockserve/: request.hpp  request_queue.hpp  workload_loader.hpp
blockserve-sim/src/: main.cpp  request.cpp  request_queue.cpp  workload_loader.cpp
blockserve/configs/: bad_workload.jsonl
blockserve/docs/: architecture.html  plan.md  progress.html  start.md
blockserve/docs/week/: week1.md
blockserve/include/blockserve/: log.hpp  request.hpp  simulator.hpp
blockserve/src/: log.cpp  main.cpp  simulator.cpp
blockserve/tests/: test_request.cpp  test_request_queue.cpp  test_simulator.cpp  test_workload_loader.cpp
docs/: BlockServe.md  BlockServe项目说明书.md  ClusterPilot.md  ClusterPilot项目说明书.md  cmake_guide.md  make.md  plan.md  start.md
docs/cpp/: cpp.md  optional.md  raii.md  stl.md
tinyinfer/: .gitignore  CMakeLists.txt  README.md
tinyinfer/docs/: current_scope.md  plan.md  qwen_model_shapes.md
tinyinfer/docs/plan/: README.md  day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md
tinyinfer/include/tinyinfer/: cli.hpp  model_config.hpp  status.hpp  tensor.hpp
tinyinfer/src/: cli.cpp  cli_main.cpp  model_config.cpp  status.cpp  tensor.cpp
tinyinfer/tests/: test_model_config.cpp  test_tensor.cpp
tinyinfer/tools/: export_debug_model.py  export_hf_to_tinyinfer.py  inspect_hf_model.py  reference_forward.py
